--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -75,9 +75,23 @@ $primary: $purple;
 }
 
 .fc-daygrid-day * a {
-    color: $black-bis;  
+    color: $black-bis;
 }
 
 .fc td.fc-daygrid-day.fc-day-today {
     background-color: $warning;
+}
+
+.fieldset > legend {
+    background: white;
+    font-size: 2rem;
+    font-weight: 600;
+    line-height: 1.125;
+    padding: 0 0.25em;
+    margin-left: -0.25em;
+    margin-bottom: 0.75rem;
+}
+
+.table-calendars td {
+    vertical-align: middle;
 }
