--- a/templates/admin/members.html
+++ b/templates/admin/members.html
@@ -27,6 +27,7 @@
             name: "{{ member.traits['name']['first'] + " " + member.traits['name']['last'] }}",
             email: "{{ member.traits['email'] }}",
             phone: "{{ member.traits.get('phone', '') }}",
+            birthday: "{{ member.traits.get('birthday', '') }}",
             postalCode: "{{ member.traits['postal_address']['postal_code'] }}",
             city: "{{ member.traits['postal_address']['city'] }}",
             street: "{{ member.traits['postal_address']['street'] }}",
