--- a/templates/profile.html
+++ b/templates/profile.html
@@ -112,7 +112,7 @@
                     </label>
                     <div class="field">
                         <div class="control">
-                            <input class="input" name="{{ node.attributes.name }}" type="text"
+                            <input class="input" name="{{ node.attributes.name }}" type="{{ node.attributes.type }}"
                                 value="{{ node.attributes.value if hasattr(node.attributes, 'value') else '' }}"
                                 id=" {{ node.attributes.name }}">
                         </div>
