--- a/templates/sign-up.html
+++ b/templates/sign-up.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MemberPort | Bli medlem</title>
     <link rel="stylesheet" href="{{ static_url('css/app.bundle.css') }}">
 </head>
@@ -10,114 +11,126 @@
 <body>
     <section class="hero is-dark is-fullheight">
         <div class="hero-body">
-            <div class="container">
-                <div class="column is-4 is-offset-4">
-                    <h3 class="title has-text-white">MemberPort</h3>
-                    <p class="subtitle has-text-grey">Member management</p>
-                    <div class="box">
-                        <figure class="avatar">
-                            <img src="{{ static_url('img/logo.svg') }}" >
-                        </figure>
-                        {% module xsrf_form_html() %}
-                        <form action="{{ action }}" method="{{ method }}">
-                            {% for node in nodes %}
-                            {% if node.attributes.name == 'csrf_token' %}
-                            <input name="{{ node.attributes.name }}" type="hidden" value="{{ node.attributes.value }}" />
-                            {% elif node.attributes.name == 'traits.gender' %}
-                            <div class="field">
-                                <div class="control">
-                                    <div class="select is-large" style="width: 100%;">
-                                        <select
-                                            id="{{ node.attributes.name }}"
-                                            name="{{ node.attributes.name }}"
-                                            style="width: 100%;"
-                                            data-value="{{ node.attributes.value if hasattr(node.attributes, 'value') else ''}}">
-                                            <option disabled selected value>Välj självupplevda kön</option>
-                                            <option value="male">Man</option>
-                                            <option value="female">Kvinna</option>
-                                            <option value="other">Annan</option>
-                                        </select>
-                                    </div>
-                                </div>
-                                <p class="help">Läs om varför vi behöver denna uppgift <a href="#">här</a>.</p>
-                            </div>
-                            {% elif node.attributes.name == 'traits.municipality' %}
-                            <div class="field">
-                                <div class="control">
-                                    <div class="select is-large" style="width: 100%;">
-                                        <select
-                                            id="{{ node.attributes.name }}"
-                                            name="{{ node.attributes.name }}"
-                                            style="width: 100%;"
-                                            data-value="{{ node.attributes.value if hasattr(node.attributes, 'value') else ''}}">
-                                            <option disabled selected value>Välj din kommun</option>
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            {% elif node.attributes.name == 'traits.country' %}
-                            <div class="field">
-                                <div class="control">
-                                    <div class="select is-large">
-                                        <select
-                                            id="{{ node.attributes.name }}"
-                                            name="{{ node.attributes.name }}"
-                                            onchange="updateMunicipalities()">
-                                            {% for country in countries %}
-                                            <option
-                                                value="{{ country.name }}"
-                                                {{ 'selected' if (node.attributes.value if hasattr(node.attributes, 'value') else default_country) == country.name else '' }}
-                                                >{{ country.name }}</option>
-                                            {% end %}
-                                        </select>
-                                    </div>
-                                </div>
-                            </div>
-                            {% elif node.attributes.name != 'method' %}
-                            <div class="field">
-                                <div class="control">
-                                    <input
+            <div class="container is-max-desktop">
+                <h3 class="title has-text-white has-text-centered">MemberPort</h3>
+                <p class="subtitle has-text-grey has-text-centered">Member management</p>
+                <div class="box">
+                    {% module xsrf_form_html() %}
+                    <form id="signUpForm" action="{{ action }}" method="{{ method }}">
+                        {% for node in nodes %}
+                        {% if node.attributes.name == 'csrf_token' %}
+                        <input name="{{ node.attributes.name }}" type="hidden" value="{{ node.attributes.value }}" />
+                        {% elif node.attributes.name == 'traits.gender' %}
+                        <div class="field">
+                            <label class="label">{{ placeholders[node.attributes.name] }}</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select
+                                        id="{{ node.attributes.name }}"
                                         name="{{ node.attributes.name }}"
-                                        class="input is-large"
-                                        type="{{ node.attributes.type }}"
-                                        placeholder="{{ placeholders[node.attributes.name] }}"
-                                        value="{{ node.attributes.value if hasattr(node.attributes, 'value') else '' }}"
-                                        />
+                                        style="width: 100%;"
+                                        data-value="{{ node.attributes.value if hasattr(node.attributes, 'value') else ''}}">
+                                        <option disabled selected value>Välj självupplevda kön</option>
+                                        <option value="male">Man</option>
+                                        <option value="female">Kvinna</option>
+                                        <option value="other">Annan</option>
+                                        <option value="unknown">Vill inte uppge</option>
+                                    </select>
                                 </div>
                             </div>
-                            {% else %}
-                            <input name="method" type="hidden" value="{{ node.attributes.value }}">
-                            <button type="submit" class="button is-block is-info is-large is-fullwidth">
-                                Registrera
-                            </button>
-                            {% end %}
-                            {% for error in node.messages.value %}
-                            {% if error.type == 'error' %}
-                            <div class="notification is-danger">
-                                <button type="button" class="delete"></button>
-                                {{ error.text }}
+                        </div>
+                        {% elif node.attributes.name == 'traits.municipality' %}
+                        <div class="field">
+                            <label class="label">{{ placeholders[node.attributes.name] }}</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select
+                                        id="{{ node.attributes.name }}"
+                                        name="{{ node.attributes.name }}"
+                                        style="width: 100%;"
+                                        data-value="{{ node.attributes.value if hasattr(node.attributes, 'value') else ''}}">
+                                        <option disabled selected value>Välj din kommun</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        {% elif node.attributes.name == 'traits.country' %}
+                        <div class="field">
+                            <label class="label">{{ placeholders[node.attributes.name] }}</label>
+                            <div class="control">
+                                <div class="select is-fullwidth">
+                                    <select
+                                        id="{{ node.attributes.name }}"
+                                        name="{{ node.attributes.name }}"
+                                        onchange="updateMunicipalities()">
+                                        {% for country in countries %}
+                                        <option
+                                            value="{{ country.name }}"
+                                            {{ 'selected' if (node.attributes.value if hasattr(node.attributes, 'value') else default_country) == country.name else '' }}
+                                            >{{ country.name }}</option>
+                                        {% end %}
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
+                        {% elif node.attributes.name != 'method' %}
+                        <div class="field">
+                            <label class="label">{{ placeholders[node.attributes.name] }}</label>
+                            <div class="control">
+                                <input
+                                "{{ node.attributes.name }}"
+                                    name="{{ node.attributes.name }}"
+                                    class="input"
+                                    type="{{ node.attributes.type }}"
+                                    placeholder="{{ placeholders[node.attributes.name] }}"
+                                    value="{{ node.attributes.get('value', '') }}"
+                                    />
+                            </div>
+                        </div>
+                        {% else %}
+                        <input name="organizations" id="organizations" type="hidden" value="" />
+                        <div class="field">
+                            <label class="label">Föreningar jag vill bli medlem i:</label>
+                            {% for org in organizations %}
+                            <div class="control">
+                                <label class="checkbox">
+                                    <input org-id="{{ org.id }}" class="organization" type="checkbox">
+                                    {{ org.name }}
+                                </label>
                             </div>
                             {% end %}
-                            {% end %}
-                            {% end %}
-                        </form>
-                    </div>
-                    {% for error in errors %}
-                    {% if error.type == 'error' %}
-                    <div class="notification is-danger">
-                        <button class="delete"></button>
-                        {{ error.text }}
-                    </div>
-                    {% end %}
-                    {% end %}
-                    <p class="has-text-grey">
-                        <a href="/auth/login">Logga in</a>
-                    </p>
+                            </div>
+                        </div>
+                        När du klickar på registreringsknappen godkänner du att dina uppgifter samlas in enligt <a class="has-text-link" href="/integrity">integritetspolicyn</a>.
+                        <input name="method" type="hidden" value="{{ node.attributes.value }}">
+
+                        {% for error in errors %}
+                        {% if error.type == 'error' %}
+                        <div class="notification is-danger">
+                            <button class="delete"></button>
+                            {{ error.text }}
+                        </div>
+                        {% end %}
+                        {% end %}
+
+                        <button type="submit" class="button is-block is-info is-large is-fullwidth">
+                            Registrera
+                        </button>
+                        {% end %}
+                        {% for error in node.messages.value %}
+                        {% if error.type == 'error' %}
+                        <div class="notification is-danger">
+                            <button type="button" class="delete"></button>
+                            {{ error.text }}
+                        </div>
+                        {% end %}
+                        {% end %}
+                        {% end %}
+                    </form>
                 </div>
             </div>
         </div>
     </section>
 </body>
-<script src="{{ static_url('js/api.js') }}"></script>
-<script src="{{ static_url('js/sign-up.js') }}"></script>
+<script src="{{ static_url('sign-up.bundle.js') }}"></script>
 </html>
